Fixing various sidebar issues
Made .small links centered.
Made the forum link centered.
Stopped overflowing series links on mobile.
Made the "For New Users" dropdown not overflow on mobile when uncollapsed.
Added a tiktok icon for social.

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -468,6 +468,7 @@
 		--reddit-icon-color: 225, 69, 0;
 		--sandbox-icon-color: 35, 140, 120;
 		--steam-icon-color: 8, 20, 40;
+		--tiktok-icon-color: 37, 244, 238;
 		--twitch-icon-color: 100, 65, 165;
 		--twitter-icon-color: 29, 161, 242;
 		--youtube-icon-color: 255, 0, 0;
